--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,10 @@
             android:id="@+id/textView"/>
     <ListView
             android:layout_width="395dp"
-            android:layout_height="675dp" android:layout_marginTop="8dp"
+            android:layout_height="0dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/categoryListView"/>
+            android:id="@+id/categoryListView"
+            android:divider="@null" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
