--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -8,23 +8,23 @@
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@drawable/hat1"
-            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/productImage" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="22dp"
-            android:id="@+id/textView2" tools:text="Beanie"
+            android:id="@+id/productName" tools:text="Beanie"
             android:textSize="18sp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/productImage" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView3" tools:text="$18"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
+            android:id="@+id/productPrice" tools:text="$18"
+            app:layout_constraintTop_toBottomOf="@id/productName"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
