--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -26,5 +26,6 @@
             android:id="@+id/productPrice" tools:text="$18"
             app:layout_constraintTop_toBottomOf="@id/productName"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            android:textAlignment="center"/>
 </android.support.constraint.ConstraintLayout>
